2013-06-23 Shlomi Fish <shlomif@shlomifish.org>
	* Add minimum version of perl to 5.8.x (CPANTS Kwalitee).
	* Add LICENSE file. (CPANTS).
	* New Release IO-Socket-INET6-2.72

2013-06-23 Shlomi Fish <shlomif@shlomifish.org>
	* Correct typos.
		- https://rt.cpan.org/Public/Bug/Display.html?id=86344
	* New Release IO-Socket-INET6-2.71

2013-05-21 Shlomi Fish <shlomif@shlomifish.org>
	* Fix a typo:
		- https://rt.cpan.org/Ticket/Display.html?id=73143
	* Add t/style-trailing-space.t and got rid of trailing space.
	* New Release IO-Socket-INET6-2.70

2011-11-28 Shlomi Fish <shlomif@shlomifish.org>
	* Fix the imports on t/io_multihomed6.t .
		- Fixes https://rt.cpan.org/Ticket/Display.html?id=72769 again.
	* Update the link to the repository in Build.PL.
	* New Release IO-Socket-INET6-2.69

2011-11-28 Shlomi Fish <shlomif@shlomifish.org>
	* Solved symbol clashes in t/io_multihomed6.t .
		- Fixes https://rt.cpan.org/Ticket/Display.html?id=72769
	* New Release IO-Socket-INET6-2.68

2011-01-21 Shlomi Fish <shlomif@shlomifish.org>
	* IO-Socket is doing some imports so we now do use IO::Socket ().
		- Fixed the rest of the imports.
	* Thanks to LeoNerd
	* New Release IO-Socket-INET6-2.67

2011-01-13 Shlomi Fish <shlomif@shlomifish.org>
	* Made the use Socket call import constants selectively, and not rely
	on @EXPORT's whims:
		- http://www.cpantesters.org/cpan/report/d6e547be-19b5-11e0-bbdc-e5c0d6c987b5
	* New Release IO-Socket-INET6-2.66

2010-06-11 Shlomi Fish <shlomif@shlomifish.org>
	* Add a fix for t/io_multihomed6.t to make sure
	ok 3 will be printed before ok 4. due to many failures in the tests.
	Such as:
		- http://www.cpantesters.org/cpan/report/07413426-b19f-3f77-b713-d32bba55d77f
	* New Release IO-Socket-INET6-2.65

2010-06-08 Shlomi Fish <shlomif@shlomifish.org>
	* Applied a patch to fix t/io_multihomed6.t on old Perls / old Linux
	distributions:
		- https://rt.cpan.org/Ticket/Display.html?id=58198
		- Thanks to Paul.
	* New Release IO-Socket-INET6-2.64
