@@ -1,3 +1,7 @@
+2021-12-10 Shlomi Fish <shlomif@shlomifish.org>
+	* Deprecate in favour of L<IO::Socket::IP> .
+	* New Release IO-Socket-INET6-2.73
+
 2013-06-23 Shlomi Fish <shlomif@shlomifish.org>
 	* Add minimum version of perl to 5.8.x (CPANTS Kwalitee).
 	* Add LICENSE file. (CPANTS).
